fix page layout regarding page height and remove permanent y-scrollbar

--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,9 @@
 /* app css stylesheet */
 
+body {
+	overflow-y: hidden !important;
+}
+
 /* toastr library override of transparency */
 .toast { opacity: 0.8 }
 
@@ -920,10 +924,12 @@ pre.CodeMirror-line {
 	background: rgb(236,240,245);
 	z-index: 1003;
 	border-bottom: 2px solid gray;
+	max-height: 5vh !important;
+	height: 5vh !important;
 }
 
 #map {
-	height: 94vh;
+	height: 95vh;
 	position: relative;
 }
 
@@ -1692,8 +1698,8 @@ color: #777;
 	  display: -webkit-flex;
 	  display: -ms-flexbox;
 	  display: flex;
-    height:94vh; /* fix IE11 */
-    min-height:100%; /* fix IE11 */
+	max-height: 95vh !important;
+	height: 95vh !important;
 }
 
 aside{
@@ -1709,8 +1715,7 @@ aside{
  		/* min-width: 35%; */
     max-width: 35%;
 		width:100%;
-		height: 94vh;
-		max-height: 94vh;
+		height: 100%;
 		/* min-height: 100vh; */
 		background: rgb(236,240,245);
 		transition: opacity 0.3s;
@@ -1726,8 +1731,7 @@ aside{
     /* min-width: 35%; */
     max-width: 35%;
 		width:100%;
-		height: 94vh;
-		max-height: 98%;
+		height: 100%;
 		/* min-height: 100vh; */
 		background: rgb(236,240,245);
 		transition: opacity 0.3s;
@@ -1744,8 +1748,7 @@ aside{
 	/* min-width: 35%; */
 	max-width: 35%;
 	width:100%;
-		height: 94vh;
-		/* min-height: 100vh; */
+	height: 100%;
 		background: rgb(236,240,245);
 		transition: opacity 0.3s;
 		overflow: auto;
@@ -1760,8 +1763,7 @@ aside{
 	/* min-width: 35%; */
 	max-width: 35%;
 	width:100%;
-		height: 94vh;
-		/* min-height: 100vh; */
+	height: 100%;
 		background: rgb(236,240,245);
 		transition: opacity 0.3s;
 		overflow: auto;
@@ -1776,8 +1778,7 @@ aside{
 	/* min-width: 42%; */
 	max-width: 42%;
 	width:100%;
-		/* min-height: 100vh; */
-		height: 94vh;
+	height: 100%;
 		background: rgb(236,240,245);
 		transition: opacity 0.3s;
 		overflow: auto;
@@ -1792,8 +1793,7 @@ aside{
 	/* min-width: 42%; */
 	max-width: 42%;
 	width:100%;
-		/* min-height: 100vh; */
-		height: 94vh;
+	height: 100%;
 		background: rgb(236,240,245);
 	transition: opacity 0.3s;
 		overflow: auto;
@@ -1808,8 +1808,7 @@ aside{
 	/* min-width: 35%; */
 	max-width: 35%;
 	width:100%;
-		/* min-height: 100vh; */
-		height: 94vh;
+	height: 100%;
 		background: rgb(236,240,245);
 transition: opacity 0.3s;
 		overflow: auto;
@@ -1824,8 +1823,7 @@ transition: opacity 0.3s;
 	/* min-width: 35%; */
 	max-width: 35%;
 	width:100%;
-		/* min-height: 100vh; */
-		height: 94vh;
+	height: 100%;
 		background: rgb(236,240,245);
 transition: opacity 0.3s;
 		overflow: auto;
@@ -1840,8 +1838,7 @@ transition: opacity 0.3s;
 	/* min-width: 42%; */
 	max-width: 42%;
 	width:100%;
-		/* min-height: 100vh; */
-		height: 94vh;
+	height: 100%;
 		background: rgb(236,240,245);
 transition: opacity 0.3s;
 		overflow: auto;
@@ -1857,8 +1854,7 @@ transition: opacity 0.3s;
 	max-width: 35%;
 	width:100%;
 	font-size: 11px;
-		/* min-height: 100vh; */
-		height: 94vh;
+	height: 100%;
 		background: rgb(236,240,245);
 		transition: opacity 0.3s;
 		overflow: auto;
